2005-10-14 00:42  hjanuschka

	* ChangeLog, src/client/cmd.c, src/client/portier.c: portier/cmd:
	  get_services -> recieve a list of passive services

2005-10-14 00:13  hjanuschka

	* ChangeLog, bartlby.cfg, src/check.c, src/sched.c, src/trigger.c:
	  logging improved, check fixup

2005-10-09 16:44  hjanuschka

	* ChangeLog, bartlby.cfg, src/check.c, src/sched.c,
	  src/client/agent.c: agent announces OS and version

2005-10-03 22:48  hjanuschka

	* src/trigger.c: [no log message]

2005-10-01 01:58  hjanuschka

	* include/bartlby.h, src/bartlby.c: [no log message]

2005-09-30 23:01  hjanuschka

	* src/libs/mysql.c: delete server deletes now also the services ;-)

2005-09-28 23:46  hjanuschka

	* ChangeLog, Makefile, include/bartlby.h, src/Makefile,
	  src/bartlby.c, src/check.c, src/config.c, src/daemon.c,
	  src/global.c, src/lib, src/replication.c, src/sched.c, src/shm.c,
	  src/trigger.c, src/client/Makefile, src/client/agent.c,
	  src/client/cmd.c, src/client/portier.c, src/libs/Makefile,
	  src/libs/firebird.c, src/libs/mysql.c, src/tools/Makefile,
	  src/tools/shmt.c: converted files to unix jabber.sh -> disabled
	  core dumps -> jabblibs segfaults
	  will try to patch it later

2005-09-28 23:37  hjanuschka

	* ChangeLog, Makefile, src/sched.c, trigger/jabber.sh: [no log
	  message]

2005-09-27 21:39  hjanuschka

	* src/: trigger.c, client/agent.c: trigger timeout agent local
	  timeout

2005-09-27 20:21  hjanuschka

	* ChangeLog, Makefile, src/global.c, src/trigger.c,
	  src/libs/mysql.c: [no log message]

2005-09-25 18:31  hjanuschka

	* include/bartlby.h, src/trigger.c, src/libs/mysql.c: trigger: can
	  now be enabled/disabled per trigger in web ui ui: add/modify
	  worker can now set and display workers selected datalib: api
	  modifications for trigger enable/disable feature

2005-09-25 17:24  hjanuschka

	* ChangeLog, bartlby.cfg, src/trigger.c, trigger/icq.sh: icq.sh
	  trigger for icq in combination with a running licq

2005-09-25 15:30  hjanuschka
